fixed the loader alignment

--- a/src/semantic/common.scss
+++ b/src/semantic/common.scss
@@ -418,4 +418,19 @@ ul.calendar-actions {
      }
  }
 
+ .loader-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    vertical-align: middle;
+    text-align: center;
+    div  {
+        width: 100%;
+        height: 100%;
+        vertical-align: middle;
+        position: absolute;
+        top: 40%;
+     }
+ }
  
